HomePage Edit - Bare Basic Text

--- a/flaskr/templates/homePage.html
+++ b/flaskr/templates/homePage.html
@@ -4,4 +4,33 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=3">
         <title>JoyBot</title>
+        <!--MAIN CSS FILE BELOW-->
+        <link href="static/homePage-style.css" type="text/css" rel="stylesheet">
     </head>
+
+    <body>
+        <header>
+          <nav id="navLinks">
+            <div class="dropdown">
+              <a class="mood-tracker-class" href="index.html"><b>mood tracker</b></a>
+              <a class="mood-randomizer-class" href="#moodRandomizer"><b>mood randomizer</b></a>
+              <a class="joy-bot-class" href="#JoyBot"><b>JoyBot</b></a>
+              <a class="login-class" href="#login"><b>login</b></a>
+            </div>
+          </nav>
+        </header>
+
+        <section id="front">
+            <div class="frontContainer">
+              <h1 id="frontText">JoyBot</h1>
+              <h2 class="frontText">Welcome to JoyBot! Our mission is to help our users 
+                not feel alone. We believe that mental health is a very important issue 
+                that should be dealt with great care and love. So join us! Talk to our JoyBot, 
+                record your moods to better understand your mood patterns, and click on our
+                mood randomizer to help brighten your mood. We, at JoyBot, care about our
+                users and wish them nothing but happiness. Enjoy!
+              </h2>
+            </div>
+          </section>
+
+    </body>
