edit mood and rate pages

--- a/flaskr/templates/mood.html
+++ b/flaskr/templates/mood.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="mood.css" rel="stylesheet" type="text/css">
+        <link href="../static/mood.css" type="text/css" rel="stylesheet" >
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!--{% extends "home.html" %}
+
+        {% block title %}
+        Mood Tracker Log
+        {% endblock title %}
+
+        {% block content %}-->
     </head>
     <body>
+        <!--{% block content %}-->
         <div class="navbar">
             <div class="left">
-                <a href="">Tracker</a>
-                <a href="">Shuffle</a>
+                <a href="">MoodTracker</a>
+                <a href="">MoodRandomizer</a>
                 <a href="">JoyBot</a>
             </div>
             <div class="right">
-                <a href="">log in</a>
+                <a href="">LogIn</a>
             </div>
         </div>
-        <br>
 
         <div class="datecal">
             <span><img src="calendar.png" alt="cal_icon">&nbsp&nbsp 10/28/20</span>
@@ -25,6 +33,7 @@
 
         <div class="container">
             <div class="profile">
+                <!-- <img src="profile.png" alt="profile"> -->
                 <div class="userpic">
                     <img src="user.png" alt="profile pic">
                 </div>
@@ -43,7 +52,8 @@
                                 <p>#2 content hereeeeeeeee</p>
                             </div>
                             <div class="controls">
-                                <span><img src="edit.png" alt="edit entry"><img src="trash.png" alt="trash"></span>
+                                <img src="edit.png" alt="edit entry">
+                                <img src="trash.png" alt="trash">
                             </div>
                         </div>
                         <div class="entry">
@@ -52,7 +62,8 @@
                                 <p>#2 content hereeeeeeeee</p>
                             </div>
                             <div class="controls">
-                                <span><img src="plus.png" alt="add entry"><img src="plus.png" alt="add entry"></span>
+                                <img src="edit.png" alt="edit entry">
+                                <img src="trash.png" alt="trash">
                             </div>
                         </div>
                         <div class="entry">
@@ -61,13 +72,18 @@
                                 <p>#2 content hereeeeeeeee</p>
                             </div>
                             <div class="controls">
-                                <span><img src="plus.png" alt="add entry"><img src="plus.png" alt="add entry"></span>
+                                <img src="edit.png" alt="edit entry">
+                                <img src="trash.png" alt="trash">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+        <br>
+        <div class="graph">
+            matplotlib or plotly?
+        </div>
+        <!--{% endblock content%}-->
     </body>
 </html>
