--- a/flaskr/templates/moodrandhome.html
+++ b/flaskr/templates/moodrandhome.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Red Hat Display" rel="stylesheet">
+    <link href="../static/mood.css" type="text/css" rel="stylesheet" >
+
     <style>
     h1 {text-align: center;}
     p {text-align: center;}
-    div {text-align: center;}
     body {
       font-family: 'Red Hat Display';font-size: 22px;
     }
@@ -19,13 +20,20 @@
 
     <title>Mood Randomizer</title>
     
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
   </head>  
   <body>
+
+    <div class="navbar">
+        <div class="left">
+            <a href="">MoodTracker</a>
+            <a href="">MoodRandomizer</a>
+            <a href="">JoyBot</a>
+        </div>
+        <div class="right">
+            <a href="">LogIn</a>
+        </div>
+    </div>
+
     <h1>Mood Randomizer</h1>
     
     <p>
