--- a/flaskr/templates/SignUpPage.html
+++ b/flaskr/templates/SignUpPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="../Desktop/SignUpPage.css" rel="stylesheet" type="text/css">
+        <link href="../static/SignUpPage.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
