--- a/flaskr/templates/rate.html
+++ b/flaskr/templates/rate.html
@@ -36,9 +36,9 @@
         <div class="space"></div>
         <div class="choose_mood">
             <div class="mood_emoji">
-                <img src="sad.png" alt="sad">
-                <img src="neutral.png" alt="neutral">
-                <img src="happy.png" alt="happy">
+                <img src="../static/img/sad.png" alt="sad">
+                <img src="../static/img/neutral.png" alt="neutral">
+                <img src="../static/img/happy.png" alt="happy">
             </div>
             <div class="tickmarks">
                 <p>|</p>
