--- a/flaskr/static/rate.css
+++ b/flaskr/static/rate.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("bg.png");
+    background-image: url("img/bg.png");
     background-attachment: fixed;
     background-size: cover;
 }
@@ -130,7 +130,7 @@ button {
     .rate {
         width: 70%;
     }
-    
+
     .entrydetails {
         flex-direction: column;
         background-color: red;
