centered heading, white text

--- a/flaskr/templates/moodrandhome.html
+++ b/flaskr/templates/moodrandhome.html
@@ -9,15 +9,21 @@
     <link href="../static/mood.css" type="text/css" rel="stylesheet" >
 
     <style>
-<<<<<<< HEAD
-    h1 {text-align: center;}
-    p {text-align: center;}
-    body {
-      font-family: 'Red Hat Display';font-size: 22px;
-    }
-    button {text-align: center;}
-      
-  
+        h1 {
+            text-align: center;
+            color: white
+        }
+        p {
+            text-align: center;
+            color: white
+
+        }
+        body {
+            font-family: 'Red Hat Display';font-size: 22px;
+        }
+        button {
+            text-align: center;
+        }
     </style>
 
     <title>Mood Randomizer</title>
@@ -32,45 +38,11 @@
             <a href="">JoyBot</a>
         </div>
         <div class="right">
-            <a href="">LogIn</a>
+            <a href="">Login</a>
         </div>
     </div>
 
-=======
-        h1 {
-            text-align: center;
-        }
-        
-        p {
-            text-align: center;
-        }
-        
-        div {
-            text-align: center;
-        }
-        
-        body {
-            font-family: 'Red Hat Display';
-            font-size: 22px;
-        }
-        
-        button {
-            text-align: center;
-        }
-    </style>
-
-    <title>Mood Randomizer</title>
-
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-
-    <!-- import the webpage's javascript file
-    <script src="/script.js" defer></script> -->
-</head>
-
-<body>
->>>>>>> ee6ba9f2e8eaf742d8e9867cd913ecd4019457ab
-    <h1>Mood Randomizer</h1>
+    <h1 style="text-align:center">Mood Randomizer</h1>
 
     <p>
         I want to feel...
