--- a/flaskr/static/rate.css
+++ b/flaskr/static/rate.css
@@ -82,10 +82,11 @@ h3 {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
     text-align: center;
+    padding-bottom: 10px;
+    background-color: red;
 }
 .notes:first-child {
     margin-right: 3vw;
-    margin-bottom: 3vw;
 }
 .notes textarea {
     width: 90%;
@@ -105,7 +106,7 @@ h3 {
     text-align: center;
 }
 button {
-    padding: 5px 5vw;
+    padding: 7px 3vw;
     border-radius: 10px;
     outline: none;
     border: 0;
@@ -133,16 +134,18 @@ button {
 
     .entrydetails {
         flex-direction: column;
-        background-color: red;
     }
     .notes {
         width: 100%;
         margin: 0 auto;
     }
-    /* .notes:first-child {
+    .notes:first-child {
         margin-bottom: 20px;
-    } */
+    }
     .drawing {
         width: 100%;
+    }
+    button {
+        padding: 7px 7vw;
     }
 }
