--- a/flaskr/templates/LogInPage.html
+++ b/flaskr/templates/LogInPage.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
-        <link href="../static/LogInPage.css" rel="stylesheet" type="text/css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link href="../static/LogInPage.css" rel="stylesheet" type="text/css">
+
+        <title>
+            Log In
+        </title>
     </head>
 
     <body>
          <nav class="nav navbar-default">
             <div class="nav navbar-nav left">
-                <a href=""><b>mood tracker</b></a>
-                <a href=""><b>mood randomizer</b></a>
+                <a href=""><b>MoodTracker</b></a>
+                <a href=""><b>MoodRandomizer</b></a>
                 <a href=""><b>JoyBot</b></a>
-            <div class="nav navbar-nav right">
-                <a href="">log in</a>
-            </div>
-        </div> 
+                <div class="nav navbar-nav right">
+                    <a href="">LogIn</a>
+                </div>
+            </div> 
          </nav>
+
         <div class="center" style="color: #ffffff; background-color: transparent;">
             <h1>Log In</h1>
         </div>
