--- a/flaskr/static/homePage-style.css
+++ b/flaskr/static/homePage-style.css
@@ -3,65 +3,143 @@
     /*border: 1px solid red !important*/
   }
   
-  html {
+  html,body {
     overflow-x: hidden;
+    font-family: 'Red Hat Display';
+    background-attachment: fixed;
+    background-size: cover;
   }
   
   /* ***NAVIGATION LINKS SECTION *** */
   
-  #navLinks {
-    height: 30px;
-    position: fixed;
-    background-color: black;
-    width: 100%;
-    margin: 0 0 10px 0;
-    z-index: 2;
-    text-align: center;
-  }
+/*styling the nav bar*/
+div.navbar-nav {
+    display: flex;
+    /*margin-bottom: 10px;*/
+    z-index: 0;
+}
 
-  h1 {
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 80px;
-    margin: 0 0 10px 0;
+div.navbar-nav a {
+  color: black;
+  display: inline-block;
+  text-decoration: none;
+  margin: 1vw 2vmax;
+  vertical-align: middle;
+  justify-content: center;
+  align-items: center;
+}
+
+div.right {
+  display: inline;
+  float: right;
+  text-align: right;
+  margin: 0 auto;
+  margin-right: 0;
+}
+
+/*styling the JoyBot website title*/  
+#frontText {
+  color: black;
+  font-size: 80px;
+  margin: 0 0 10px 0;
+
+  position: absolute;
+  width: 889px;
+  height: 146px;
+  left: 598px;
+  top: 596px;
+  
+  font-family: 'Red Hat Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 80px;
+  line-height: 106px;
+  
+  color: #FFFFFF;
 }
 
 /*styling the home page background image*/
 #front {
   width: 100%;
   height: 100vh;
-  position: relative;
-  top: 30px;
-  z-index: 1;
-  overflow: hidden;
-  opacity: 0.6;
-
-  background-image: url("./siteImages/backgroundImage.jpeg");
+  
+  background-image: linear-gradient(to top, rgba(33,9,182,1), lightblue);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
 
-.frontText{
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 25px;
-    margin-bottom: 50px;
-    letter-spacing: 1px;
+/*styling the website description*/
+#web-summary {
+  position: absolute;
+  width: 668px;
+  height: 140px;
+  left: 614px;
+  top: 700px;
+
+  font-family: 'Red Hat Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+
+  color: #FFFFFF;
 }
 
-/*here we are styling the info on the front page to be aligned at the center 
-so it can be easily seen and more presentable */
-#front .frontContainer {
+/*styling the homepage JoyBot image*/
+#joy-image-section img {
+  background-size: contain;
+  align-self: flex-end;
+  height: 614px;
+  width: 316px;
+  opacity: 0.9;
+
   position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 0 15px;
+  width: 316px;
+  height: 614px;
+  left: 200px;
+  /*top: 1014px;*/
+  top: 400px;
+
+
+  /*mix-blend-mode: lighten;*/
+  /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
+  /*transform: matrix(1, 0, 0, -1, 0, 0);*/
+}
+
+/*styling the background image of frontPage 2*/
+#frontPage2 {
+  color: white;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  /*top: 30px;
+  z-index: 1;*/
+  overflow: hidden;
+  
+  background-image: url("img/homePage2background.png");
+  background-color: rgba(33, 9, 182, 0);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/*styling of moodtracker icon on home page 2*/
+#moodtracker-box {
+  margin-bottom: 275px;
+  text-align: center;
+}
+
+/*styling of mood randomizer icon on home page 2*/
+#moodrandomizer-box {
+  margin-bottom: 275px;
+  text-align: center;
+}
+
+/*styling of JoyBot icon on home page 2*/
+#JoyBot-box {
+  margin-bottom: 275px;
+  text-align: center;
 }
