update title+linked css

--- a/flaskr/templates/moodrating.html
+++ b/flaskr/templates/moodrating.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
 {% block stylesheet %}
-    <link href="../static/style.html" rel="stylesheet">
+    <link href="../static/moodrating.css" rel="stylesheet">
+    <link href="../static/mood.css" rel="stylesheet">
 {% endblock %}
 
 
 {% block title %}
-    JoyBot | Chat
+    JoyBot | MoodRating
 {% endblock %}
 
 {% block content %}
