edited navbar html and others

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device_width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
 
         <!-- to fill in stylesheets used -->
@@ -18,12 +18,12 @@
     <body>
         <section id="nav-bar">
             <div class="left">
-                <a href="">MoodTracker</a>
-                <a href="">MoodRandomizer</a>
-                <a href="">JoyBot</a>
+                <a href="">moodtracker</a>
+                <a href="">moodrandomizer</a>
+                <a href="">joybot</a>
             </div>
             <div class="right">
-                <a href="">LogIn</a>
+                <a href="">login</a>
             </div>
         </section>
 
