--- a/flaskr/templates/moodrandhome.html
+++ b/flaskr/templates/moodrandhome.html
@@ -30,16 +30,16 @@
   </head>  
   <body>
 
-    <div class="navbar">
-        <div class="left">
-            <a href="">MoodTracker</a>
-            <a href="">MoodRandomizer</a>
-            <a href="">JoyBot</a>
+    <nav class="nav navbar-default">
+        <div class="nav navbar-nav left">
+            <a href=""><b>mood tracker</b></a>
+            <a href=""><b>mood randomizer</b></a>
+            <a href=""><b>JoyBot</b></a>
+            <div class="nav navbar-nav right">
+                <a href="">log in</a>
+            </div>
         </div>
-        <div class="right">
-            <a href="">Login</a>
-        </div>
-    </div>
+    </nav>
 
     <h1 style="text-align:center">Mood Randomizer</h1>
 
