added h2 and button styling

--- a/flaskr/templates/moodrandhome.html
+++ b/flaskr/templates/moodrandhome.html
@@ -25,18 +25,18 @@
 
     <h1 style="text-align:center">Mood Randomizer</h1>
 
-    <p>
+    <h2>
         I want to feel...
         <select class="selectpicker">
         <option>Relaxed</option>
         <option>Amused</option>
         <option>Motivated</option>
       </select>
-    </p>
+    </h2>
 
 
     <div style="text-align:center;">
-        <button type="button" onclick="alert('Hello world!')">Go!</button>
+        <button class="hi" type="button" onclick="alert('Hello world!')">Go!</button>
     </div>
 
 
